--- a/airbnb_clone/package.json
+++ b/airbnb_clone/package.json
@@ -17,8 +17,7 @@
       "dev": "vite",
       "build": "tsc && vite build",
       "lint": "eslint ./src/**/*.tsx --ext ts,tsx --report-unused-disable-directives --max-warnings 5",
-      "preview": "vite preview",
-      "prepare": "husky install"
+      "preview": "vite preview"
   },
   "dependencies": {
       "react": "^18.2.0",
@@ -37,7 +36,6 @@
       "eslint-config-prettier": "^9.0.0",
       "eslint-plugin-react-hooks": "^4.6.0",
       "eslint-plugin-react-refresh": "^0.4.3",
-      "husky": "^8.0.3",
       "lint-staged": "^14.0.1",
       "postcss": "^8.4.29",
       "prettier": "^3.0.3",
